testsuite/single/tests/compiler/fail/bad_string_index.lpc
void do_tests() { string *item = ({ "one", "two" }); return item["bad_index"]; }